# ros

./: .gitignore
src/: calc_position.ipynb
src/my_first_package/: package.xml  setup.py
src/my_first_package/launch/: dist_turtle_action.launch.py
src/my_first_package/my_first_package/: dist_turtle_action_server.py  my_multi_thread.py  my_publisher.py  my_service_server.py  my_subscriber.py  turtle_cmd_and_pose.py
src/my_first_package/params/: turtlesim.yaml
src/my_first_package_msgs/: CMakeLists.txt  package.xml
src/my_first_package_msgs/msg/: CmdAndPoseVel.msg
src/soccer_game/: README.md  package.xml  setup.cfg  setup.py
src/soccer_game/launch/: soccer.launch.py  viewer.launch.py
src/soccer_game/soccer_game/: example_bot.py  soccer_referee.py
src/soccer_game/test/: test_physics.py
src/soccer_game/viewer/: index.html
src/soccer_msgs/: CMakeLists.txt  package.xml
src/soccer_msgs/action/: Shoot.action
src/soccer_msgs/msg/: PlayerState.msg  WorldState.msg
src/soccer_msgs/srv/: MoveTo.srv  Register.srv
